Get base url from the conf file

--- a/tcia-rest-client-java/src/main/resources/config.test.yaml
+++ b/tcia-rest-client-java/src/main/resources/config.test.yaml
@@ -2,3 +2,5 @@ authheader: Authorization
 authflag: ldap
 username: myusername
 password: mypassword
+baseurl: http://api.cancerimagingarchive.net
+resource: /radiology
