Fix metadata in the pom

--- a/tcia-rest-client-java/pom.xml
+++ b/tcia-rest-client-java/pom.xml
@@ -4,6 +4,24 @@
 	<groupId>edu.emory.bmi</groupId>
 	<artifactId>tcia-client</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>jar</packaging>
+
+	<name>TCIA-SDK</name>
+	<description>The TCIA Java Client</description>
+	<url>https://github.com/sharmalab/tcia-sdk</url>
+
+	<licenses>
+		<license>
+			<name>Apache License, Version 2.0</name>
+			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
+
+	<scm>
+		<url>https://github.com/sharmalab/tcia-sdk.git</url>
+	</scm>
+
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -24,8 +42,6 @@
 		</plugins>
 	</build>
 
-	<name>Bindaas Client</name>
-	<description>Java Wrapper for making secure Bindaas RESTful calls</description>
 
 	<dependencies>
 		<dependency>
