Add the source jar generation to the release phase

--- a/tcia-rest-client-java/pom.xml
+++ b/tcia-rest-client-java/pom.xml
@@ -38,6 +38,30 @@
 		<jackson.version>2.9.6</jackson.version>
 	</properties>
 
+	<profiles>
+		<profile>
+			<id>release</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-source-plugin</artifactId>
+						<version>3.0.1</version>
+						<executions>
+							<execution>
+								<id>attach-sources</id>
+								<goals>
+									<goal>jar-no-fork</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
+
+
 	<build>
 		<plugins>
 			<plugin>
