Add Assembly plugin to copy the dependencies

--- a/tcia-rest-client-java/pom.xml
+++ b/tcia-rest-client-java/pom.xml
@@ -50,12 +50,27 @@
 					<target>8</target>
 				</configuration>
 			</plugin>
+			<!--  "mvn package" invokes the below)-->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-jar-plugin</artifactId>
+				<artifactId>maven-assembly-plugin</artifactId>
 				<version>3.1.0</version>
+				<executions>
+					<execution>
+						<id>attach-dependencies</id>
+						<phase>package</phase>
+						<goals>
+							<goal>single</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<descriptorRefs>
+						<descriptorRef>jar-with-dependencies</descriptorRef>
+					</descriptorRefs>
+					<appendAssemblyId>false</appendAssemblyId>
+				</configuration>
 			</plugin>
-			<!--  "mvn package" invokes the below)-->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-source-plugin</artifactId>
